--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    
-    <title>ES6 Guide</title>
+
+    <title>vue2.0</title>
     <script src="http://play.yunkai.com/static/jquery/1.9.1/jquery.min.js"></script>
     <!-- MARKED -->
     <script src="./vendor/ditto/marked.js"></script>
@@ -13,7 +13,7 @@
     <script src="./vendor/ditto/ditto.js"></script>
     <!-- HIGHLIGHT.JS -->
     <script type="text/javascript" src="./vendor/prism/prism.js"></script>
-    
+
     <link rel="stylesheet" href="./css/app.css">
 </head>
 
@@ -28,16 +28,16 @@
     <div id="error"></div>
     <!-- DITTO -->
     <script>
-    $(function($) {
-        // essential settings
-        ditto.document_title = 'ES6 Guide';
-        ditto.index = 'README.md';
-        ditto.sidebar_file = 'sidebar.md';
-        ditto.highlight_code = true;
+        $(function($) {
+            // essential settings
+            ditto.document_title = 'vue2.0';
+            ditto.index = 'README.md';
+            ditto.sidebar_file = 'sidebar.md';
+            ditto.highlight_code = true;
 
-        // run
-        ditto.run();
-    });
+            // run
+            ditto.run();
+        });
     </script>
 </body>
 
