--- a/code/transitionStats/demo3.html
+++ b/code/transitionStats/demo3.html
@@ -18,7 +18,7 @@
 
 <body>
     <script src="http://cdn.bootcss.com/vue/2.0.7/vue.js"></script>
-    <script src="https://unpkg.com/color-js@1.0.3/color.js"></script>
+    <!--<script src="https://unpkg.com/color-js@1.0.3/color.js"></script>-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.5/TweenLite.min.js"></script>
 
     <div id="svg-polygon-demo" class="demo">
